--- a/config.json
+++ b/config.json
@@ -1023,7 +1023,8 @@
         "customAddOptionForProduct":  true,
         "showRecentlyViewSection": true,
         "csmRecentViewExpires": 30,
-        "csmRecentViewCount": 5
+        "csmRecentViewCount": 5,
+        "csmATCAction": "sidebar"
       }
     }
   ]
