--- a/config.json
+++ b/config.json
@@ -414,7 +414,7 @@
         "hide_breadcrumbs": false,
         "hide_page_heading": false,
         "hide_category_page_heading": true,
-        "hide_blog_page_heading": false,
+        "hide_blog_page_heading": true,
         "hide_contact_us_page_heading": false,
         "homepage_new_products_count": 5,
         "homepage_featured_products_count": 4,
