--- a/config.json
+++ b/config.json
@@ -415,7 +415,7 @@
         "hide_page_heading": false,
         "hide_category_page_heading": true,
         "hide_blog_page_heading": true,
-        "hide_contact_us_page_heading": false,
+        "hide_contact_us_page_heading": true,
         "homepage_new_products_count": 5,
         "homepage_featured_products_count": 4,
         "homepage_top_products_count": 4,
