Done Delete Schema File

--- a/config.json
+++ b/config.json
@@ -481,9 +481,9 @@
         "color-textSecondary": "#cba052",
         "color-textSecondary--hover": "#cba052",
         "color-textSecondary--active": "#cba052",
-        "color-textLink": "#333333",
-        "color-textLink--hover": "#757575",
-        "color-textLink--active": "#757575",
+        "color-textLink": "#212121",
+        "color-textLink--hover": "#212121",
+        "color-textLink--active": "#212121",
         "color-textHeading": "#212121",
         "color-primary": "#757575",
         "color-primaryDark": "#666666",
@@ -588,10 +588,10 @@
         "navUser-dropdown-borderColor": "#cccccc",
         "navUser-indicator-backgroundColor": "#cba052",
         "navPages-color": "#212121",
-        "navPages-color-hover": "#757575",
+        "navPages-color-hover": "#212121",
         "navPages-subMenu-backgroundColor": "#f4f2f0",
         "navPages-subMenu-separatorColor": "#cccccc",
-        "dropdown--quickSearch-backgroundColor": "#e5e5e5",
+        "dropdown--quickSearch-backgroundColor": "#f4f2f0",
         "dropdown--wishList-backgroundColor": "#cba052",
         "blockquote-cite-font-color": "#999999",
         "container-border-global-color-base": "#e5e5e5",
