--- a/config.json
+++ b/config.json
@@ -605,15 +605,15 @@
         "spinner-borderColor-dark": "#999999",
         "spinner-borderColor-light": "#ffffff",
         "hide_content_navigation": true,
-        "optimizedCheckout-header-backgroundColor": "#f5f5f5",
+        "optimizedCheckout-header-backgroundColor": "#FFFFFF",
         "optimizedCheckout-show-backgroundImage": false,
         "optimizedCheckout-backgroundImage": "",
         "optimizedCheckout-backgroundImage-size": "1000x400",
-        "optimizedCheckout-show-logo": "none",
+        "optimizedCheckout-show-logo": "custom",
         "optimizedCheckout-logo": "",
-        "optimizedCheckout-logo-size": "250x100",
+        "optimizedCheckout-logo-size": "300x37",
         "optimizedCheckout-logo-position": "left",
-        "optimizedCheckout-headingPrimary-color": "#333333",
+        "optimizedCheckout-headingPrimary-color": "#000000",
         "optimizedCheckout-headingPrimary-font": "Google_Montserrat_700",
         "optimizedCheckout-headingSecondary-color": "#333333",
         "optimizedCheckout-headingSecondary-font": "Google_Montserrat_700",
@@ -627,10 +627,10 @@
         "optimizedCheckout-buttonPrimary-color": "#ffffff",
         "optimizedCheckout-buttonPrimary-colorHover": "#ffffff",
         "optimizedCheckout-buttonPrimary-colorActive": "#ffffff",
-        "optimizedCheckout-buttonPrimary-backgroundColor": "#333333",
-        "optimizedCheckout-buttonPrimary-backgroundColorHover": "#666666",
-        "optimizedCheckout-buttonPrimary-backgroundColorActive": "#000000",
-        "optimizedCheckout-buttonPrimary-borderColor": "#333333",
+        "optimizedCheckout-buttonPrimary-backgroundColor": "#cba052",
+        "optimizedCheckout-buttonPrimary-backgroundColorHover": "#cba052",
+        "optimizedCheckout-buttonPrimary-backgroundColorActive": "#cba052",
+        "optimizedCheckout-buttonPrimary-borderColor": "#cba052",
         "optimizedCheckout-buttonPrimary-borderColorHover": "transparent",
         "optimizedCheckout-buttonPrimary-borderColorActive": "transparent",
         "optimizedCheckout-buttonPrimary-borderColorDisabled": "transparent",
@@ -650,7 +650,7 @@
         "optimizedCheckout-buttonSecondary-backgroundColorActive": "#e5e5e5",
         "optimizedCheckout-buttonSecondary-borderColorHover": "#999999",
         "optimizedCheckout-buttonSecondary-borderColorActive": "#757575",
-        "optimizedCheckout-link-color": "#476bef",
+        "optimizedCheckout-link-color": "#CBA052",
         "optimizedCheckout-link-font": "Google_Montserrat_500",
         "optimizedCheckout-discountBanner-backgroundColor": "#e5e5e5",
         "optimizedCheckout-discountBanner-textColor": "#333333",
@@ -666,13 +666,13 @@
         "optimizedCheckout-formField-placeholderColor": "#999999",
         "optimizedCheckout-formField-backgroundColor": "#ffffff",
         "optimizedCheckout-formField-errorColor": "#d14343",
-        "optimizedCheckout-formField-inputControlColor": "#476bef",
+        "optimizedCheckout-formField-inputControlColor": "#CBA052",
         "optimizedCheckout-step-borderColor": "#dddddd",
         "optimizedCheckout-header-borderColor": "#dddddd",
         "optimizedCheckout-header-textColor": "#333333",
         "optimizedCheckout-loadingToaster-backgroundColor": "#333333",
         "optimizedCheckout-loadingToaster-textColor": "#ffffff",
-        "optimizedCheckout-link-hoverColor": "#002fe1",
+        "optimizedCheckout-link-hoverColor": "#CBA052",
         "product_sale_badges": "none",
         "color_badge_product_sale_badges": "#007dc6",
         "color_text_product_sale_badges": "#ffffff",
