Done Theme Settings

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cornerstone Update Return Page",
+  "name": "Cornerstone Updated Home Settings",
   "version": "6.14.0",
   "template_engine": "handlebars_v4",
   "meta": {
@@ -1004,6 +1004,27 @@
         "home_product_banner_text": "Best Sellers",
         "home_product_banner_button": "View All",
         "home_product_banner_link": "#",
+        "homeTheLookBanner": "home-shop-the-look-banner.jpg",
+        "homeTheLookText": "Shop the look",
+        "homeTheLookItem1ProId": "10404",
+        "homeTheLookItem1DotT": "33%",
+        "homeTheLookItem1DotL": "51%",
+        "homeTheLookItem2ProId": "10380",
+        "homeTheLookItem2DotT": "47%",
+        "homeTheLookItem2DotL": "75%",
+        "homeTheLookItem3ProId": "10011",
+        "homeTheLookItem3DotT": "42%",
+        "homeTheLookItem3DotL": "21%",
+        "homeTheLookItem4ProId": "9802",
+        "homeTheLookItem4DotT": "66%",
+        "homeTheLookItem4DotL": "52%",
+        "homeTheLookItem5ProId": "10232",
+        "homeTheLookItem5DotT": "75%",
+        "homeTheLookItem5DotL": "64%",
+        "homeTheLookItem6ProId": "10294",
+        "homeTheLookItem6DotT": "86%",
+        "homeTheLookItem6DotL": "73%",
+        "homeTheLookProductList": "10404,10380,10011,9802,10232,10294",
 
         "home_banner_2col_item1_image": "home-banner-2col-1.jpg",
         "home_banner_2col_item1_title": "Piercer",
@@ -1028,6 +1049,7 @@
         "csmATCAction": "sidebar",
         "enaCalculateShipping": true,
         "calculateFreeShippingType": "all",
+        "calculateFreeShippingList": "US,UK,CA",
         "calculateFreeSuccess": "Congratulations! Your order qualifies for free UK shipping",
         "calculateFreeDefault": "You are {{remaining}} away from free UK shipping.",
         "calculalePriceRequire": "£100",
