Done Update Category Layout Custom

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cornerstone Updated Home Settings",
+  "name": "Cornerstone Done Setup",
   "version": "6.14.0",
   "template_engine": "handlebars_v4",
   "meta": {
