Update Fix Bugs 20062024

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cornerstone Update FAQS",
+  "name": "Cornerstone Done Setup Theme",
   "version": "6.14.0",
   "template_engine": "handlebars_v4",
   "meta": {
